--- a/uass_web/web/index.html
+++ b/uass_web/web/index.html
@@ -29,6 +29,7 @@
         <a href="#accomplishment">accomplishment</a>
         <a href="#contact">contact</a>
         <a href="#blogs">learn more about us</a>
+        <a href="#vidio">identitas kelompok</a>
     </nav>
 
     <div class="icons">
@@ -270,6 +271,17 @@
 
 </section>
 
+<!-- kelompok  -->
+
+<section class="vidio" id="vidio">
+
+    <div class="row">
+        <form action="">
+            <a href="kelompok.html" class="btn">IDENTITAS KELOMPOK</a>
+        </form>
+    </div>
+
+</section>
 
 <!-- footer  -->
 
